Fix header text align

--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -87,6 +87,10 @@
     text-indent: 25px;
   }
 
+  .tm-team-description-container .tm-section-title {
+    text-align: center;
+  }
+
   .gallery-container p {
     font-style: italic;
   }
